--- a/web/howto.html
+++ b/web/howto.html
@@ -12,11 +12,31 @@ and open the template in the editor.
     <link rel="stylesheet" type="text/css" href="include/css/bootstrap.min.css"/>
 </head>
 <body>
-
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation" id="mynav" style="margin-bottom: 0px;">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" 
+                    data-target="#navbar-collapse">
+                <span class="sr-only">switch</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#mynav">StandingOut</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav navbar-right" style="margin-right: 10px;">
+                <li><a href="home.jsp"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+                <li><a href="cv-builder.html"><span class="glyphicon glyphicon-pen"></span>Resume Builder</a></li>
+                <li><a href="photoGallery"><span class="glyphicon glyphicon-picture"></span>Gallery</a></li>
+                <li><a href="#mynav"><span class="glyphicon glyphicon-info-sign"></span>Help</a></li>
+            </ul>
+        </div>
+    </nav>
+    
     <div class="container">
         <div class="page-header">
-           <h1>Resume Dos and Donts
-               <small>Helpful links for you to look at.</small>
+            <h1 class="text-warning">Resume Dos and Donts<br>
+               <small class="text-success">Helpful links for you to look at.</small>
            </h1>
         </div>
 
