--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,12 @@ and open the template in the editor.
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="include/css/bootstrap.min.css"/>
 </head>
-<body onload="initfield()">
+<body onload="initfield()" 
+      style="background-image: url('include/img/bg.jpg');
+      -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;">
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation" id="mynav" style="margin-bottom: 0px;">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" 
@@ -24,24 +29,25 @@ and open the template in the editor.
             <a class="navbar-brand" href="#mynav">StandingOut</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="x.html"><span class="glyphicon glyphicon-home"></span>Home</a></li>
-                <li><a href="x.html"><span class="glyphicon glyphicon-info-sign"></span>How to make good Resume</a></li>
+            <ul class="nav navbar-nav navbar-right" style="margin-right: 10px;">
+                <li><a href="home.jsp"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+                <li><a href="cv-builder.html"><span class="glyphicon glyphicon-pen"></span>Resume Builder</a></li>
                 <li><a href="photoGallery"><span class="glyphicon glyphicon-picture"></span>Gallery</a></li>
-                <li><a href="x.html"><span class="glyphicon glyphicon-question-sign"></span>Help</a></li>
+                <li><a href="#mynav"><span class="glyphicon glyphicon-info-sign"></span>Help</a></li>
             </ul>
         </div>
     </nav>
 
-    <div style="width:100%;background-color:#FFFFFF">
+    <div style="width:100%;">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 text-center">
-                    <h1>StandingOut</h1> 
-                    <p>Submit your resume design and interactive with other resume designers.</p>                 
+                <div class="col-sm-8">
+                    <h1 style="margin-top:20%;color: #FF9933"><big>StandingOut</big></h1> 
+                    <h5 style="color: #FF9933"><big>Submit your resume design
+                            <br> and interact with other resume designers.</big></h5>                 
                 </div>
                 <div class="col-sm-4">
-                    <ul class="nav nav-tabs" style="margin-top:5px;">
+                    <ul class="nav nav-tabs" style="margin-top:20px;">
                         <li class="active"><a data-toggle="tab" href="#tab-login">Login</a></li>
                         <li><a data-toggle="tab" href="#tab-register">Register</a></li>
                     </ul>
@@ -57,7 +63,7 @@ and open the template in the editor.
                                     <label for="login-password">Password</label>
                                     <input id="login-password" type="password" name="password" class="form-control" required />
                                 </div>
-                                <input type="submit" value="submit" class="btn btn-primary"/>
+                                <input type="submit" value="sign in" class="btn btn-primary pull-right"/>
                             </form>
                         </div>
                         <div id="tab-register" class="tab-pane fade">
@@ -79,7 +85,7 @@ and open the template in the editor.
                                     <label for="confirm-password">Confirm Password</label>
                                     <input maxlength="16" id="confirm-password" type="password" name="confirm-password" class="form-control" required />
                                 </div>
-                                <input type="submit" value="submit" class="btn btn-primary"/>
+                                <input type="submit" value="sign up" class="btn btn-success pull-right"/>
                             </form>                        
                         </div>
                     </div>
@@ -89,7 +95,6 @@ and open the template in the editor.
             
     </div>
 
-        
 <script src="include/js/jquery-2.1.3.min.js"></script>
 <script src="include/js/bootstrap.min.js"></script>
 <script src="include/js/validation.js"></script>
