--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@ and open the template in the editor.
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="margin-right: 10px;">
                 <li><a href="home.jsp"><span class="glyphicon glyphicon-home"></span>Home</a></li>
-                <li><a href="cv-builder.html"><span class="glyphicon glyphicon-pen"></span>Resume Builder</a></li>
+                <li><a href="cv-builder.html"><span class="glyphicon glyphicon-pencil"></span>Resume Builder</a></li>
                 <li><a href="photoGallery"><span class="glyphicon glyphicon-picture"></span>Gallery</a></li>
                 <li><a href="#mynav"><span class="glyphicon glyphicon-info-sign"></span>Help</a></li>
             </ul>
