--- a/web/cv-builder.html
+++ b/web/cv-builder.html
@@ -12,12 +12,34 @@ Ming Chi
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
 	<meta charset="UTF-8"/>
 	<link rel="stylesheet" type="text/css" href="include/css/cv-builder-style2.css"/>
+        <link rel="stylesheet" type="text/css" href="include/css/bootstrap.min.css"/>
+        <script src="include/js/jquery-2.1.3.min.js"></script>                                   
+        <script type="text/javascript" src="include/js/jspdf.min.js"></script>                  
+        <script type="text/javascript" src="include/js/html2canvas.min.js"></script>
+        
 </head>
 <body>
-	<div class="page-header do-not-print">
-		<p>Resume Builder <small style="color:#DDDDDD">- Developed by Ming Chi</small></p>
-	</div>
-	<div class="page-content">
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation" id="mynav" style="margin-bottom: 0px;">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" 
+                    data-target="#navbar-collapse">
+                <span class="sr-only">switch</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#mynav">StandingOut</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav navbar-right" style="margin-right: 10px;">
+                <li><a href="home.jsp"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+                <li><a href="cv-builder.html"><span class="glyphicon glyphicon-pen"></span>Resume Builder</a></li>
+                <li><a href="photoGallery"><span class="glyphicon glyphicon-picture"></span>Gallery</a></li>
+                <li><a href="#mynav"><span class="glyphicon glyphicon-info-sign"></span>Help</a></li>
+            </ul>
+        </div>
+    </nav>
+	<div class="container-fluid">
 		<div class="row">
 			<div class="tools do-not-print">
 				<form onsubmit="return false">				
@@ -91,7 +113,7 @@ Ming Chi
 					<hr class="form-row-divider"/>
 					<div class="form-row">
 						<button class="btn btn-red" onclick="onClearAll()">Clear All</button>
-						<button class="btn btn-green" style="float:right;margin-right:10px;" onclick="window.print();">Print</button>
+						<button class="btn btn-green" style="float:right;margin-right:10px;" id="create_pdf">Save as PDF</button>
 					</div>
 				</form>
 			</div>
@@ -108,6 +130,8 @@ Ming Chi
 	</div>
 
 <script type="text/javascript" src="include/js/cv-builder-script2.js"></script>
+<script type="text/javascript" src="include/js/app.js"></script>
+
 </body>
 
 </html>
