--- a/web/cv-builder.html
+++ b/web/cv-builder.html
@@ -32,7 +32,7 @@ Ming Chi
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="margin-right: 10px;">
-                <li><a href="home.jsp"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+                <li><a href="home"><span class="glyphicon glyphicon-home"></span>Home</a></li>
                 <li><a href="cv-builder.html"><span class="glyphicon glyphicon-pencil"></span>Resume Builder</a></li>
                 <li><a href="photoGallery"><span class="glyphicon glyphicon-picture"></span>Gallery</a></li>
                 <li><a href="howto.html"><span class="glyphicon glyphicon-info-sign"></span>Help</a></li>
